# SysOracle

./: Cargo.toml  FEATURES.md  LICENSE  QUICKSTART.md  README.md  config.example.toml  config.toml
examples/: example_rule.lua
lua/rules/: cpu.lua  memory.lua
src/: alert.rs  app.rs  config.rs  lua_engine.rs  main.rs  metrics.rs  tui.rs
