[package]
name = "sysoracle"
version = "2.0.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
gpu = ["nvml-wrapper"]
